[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Level4.gd" type="Script" id=1]
[ext_resource path="res://Art/tiles/Tiles.tres" type="TileSet" id=2]
[ext_resource path="res://interface/Interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/dialogue_system/dialogue_system.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/NPC.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/PlayerV2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/MonsterRanged.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Background/Rock1.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/DialogueTrigger.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 224.019 )

[sub_resource type="DynamicFontData" id=2]

hinting = 2
font_path = "res://fonts/SourceCodePro-Black.ttf"

[sub_resource type="DynamicFont" id=3]

size = 100
use_mipmaps = false
use_filter = false
font_data = SubResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Level4" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -65537, 10, 0, -131072, 17, 0, -131071, 15, 0, -131070, 15, 0, -131069, 14, 0, -131068, 13, 0, -131067, 14, 0, -131066, 13, 0, -131065, 17, 0, -131064, 13, 0, -131063, 13, 0, -1, 10, 0, -65536, 24, 0, -65535, 9, 0, -65534, 8, 0, -65533, 24, 0, -65532, 24, 0, -65531, 23, 0, -65530, 8, 0, -65529, 23, 0, -65528, 24, 0, -65527, 10, 0, 65535, 10, 0, 0, 24, 0, 1, 9, 0, 2, 0, 0, 3, 24, 0, 4, 8, 0, 5, 1, 0, 6, 23, 0, 7, 24, 0, 8, 24, 0, 9, 10, 0, 131071, 10, 0, 65536, 24, 0, 65537, 0, 0, 65538, 1, 0, 65539, 1, 0, 65540, 0, 0, 65541, 23, 0, 65542, 1, 0, 65543, 8, 0, 65544, 24, 0, 65545, 10, 0, 196607, 10, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 0, 0, 131079, 24, 0, 131080, 8, 0, 131081, 10, 0, 262143, 10, 0, 196608, 24, 0, 196609, 1, 0, 196610, 0, 0, 196611, 23, 0, 196612, 23, 0, 196613, 0, 0, 196614, 1, 0, 196615, 1, 0, 196616, 0, 0, 196617, 10, 0, 327679, 10, 0, 262144, 24, 0, 262145, 23, 0, 262146, 23, 0, 262147, 0, 0, 262148, 1, 0, 262149, 1, 0, 262150, 0, 0, 262151, 24, 0, 262152, 8, 0, 262153, 10, 0, 393215, 10, 0, 327680, 7, 0, 327681, 24, 0, 327682, 9, 0, 327683, 24, 0, 327684, 1, 0, 327685, 1, 0, 327686, 8, 0, 327687, 24, 0, 327688, 9, 0, 327689, 10, 0, 458750, 23, 0, 458751, 23, 0, 393216, 24, 0, 393217, 23, 0, 393218, 23, 0, 393219, 23, 0, 393220, 24, 0, 393221, 23, 0, 393222, 23, 0, 393223, 23, 0, 393224, 23, 0, 524286, 23, 0, 524287, 23, 0, 458752, 23, 0, 458753, 23, 0, 458754, 23, 0, 458755, 23, 0, 458756, 23, 0, 458757, 23, 0, 458758, 23, 0, 458759, 23, 0, 458760, 23, 0, 458761, 23, 0, 458762, 23, 0, 589820, 23, 0, 589821, 23, 0, 589822, 23, 0, 589823, 23, 0, 524288, 23, 0, 524289, 23, 0, 524290, 23, 0, 524291, 23, 0, 524292, 23, 0, 524293, 23, 0, 524294, 23, 0, 524295, 23, 0, 524296, 23, 0, 524297, 23, 0, 524298, 23, 0, 524299, 23, 0, 655358, 23, 0, 655359, 23, 0, 589824, 23, 0, 589825, 23, 0, 589826, 23, 0, 589827, 23, 0, 589828, 23, 0, 589829, 23, 0, 589830, 23, 0, 589831, 23, 0, 589832, 23, 0, 589833, 23, 0, 589834, 23, 0, 720895, 23, 0, 655360, 23, 0, 655361, 23, 0, 655362, 23, 0, 655363, 23, 0, 655364, 23, 0, 655365, 23, 0, 655366, 23, 0, 655367, 23, 0, 655368, 23, 0, 655369, 23, 0, 655370, 23, 0, 786430, 23, 0, 786431, 23, 0, 720896, 23, 0, 720897, 23, 0, 720898, 23, 0, 720899, 23, 0, 720900, 23, 0, 720901, 23, 0, 720902, 23, 0, 720903, 23, 0, 720904, 23, 0, 720905, 23, 0 )
_sections_unfolded = [ "Cell", "Collision" ]

[node name="PlayerInterface" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Interface" parent="PlayerInterface" index="0" instance=ExtResource( 3 )]

[node name="dialogue_system" parent="." index="2" instance=ExtResource( 4 )]

wich_area = 4

[node name="YSort" type="YSort" parent="." index="3"]

sort_enabled = true

[node name="NPC" parent="YSort" index="0" groups=[
"Help",
] instance=ExtResource( 5 )]

position = Vector2( 502.146, 303.252 )
_sections_unfolded = [ "Collision", "Transform", "Visibility", "collision" ]

[node name="PlayerV2" parent="YSort" index="1" instance=ExtResource( 6 )]

position = Vector2( 566.464, 310.992 )
_sections_unfolded = [ "Collision", "Material", "Transform", "Visibility" ]

[node name="Monsters" type="YSort" parent="YSort" index="2"]

sort_enabled = true

[node name="MonsterRanged" parent="YSort/Monsters" index="0" instance=ExtResource( 7 )]

position = Vector2( 498.155, 0.445656 )
timeReload = 2.0

[node name="MonsterRanged2" parent="YSort/Monsters" index="1" instance=ExtResource( 7 )]

position = Vector2( 956.749, 96.4927 )
timeReload = 1.75

[node name="MonsterRanged3" parent="YSort/Monsters" index="2" instance=ExtResource( 7 )]

position = Vector2( 1005.48, 527.962 )
timeReload = 5.0

[node name="MonsterRanged6" parent="YSort/Monsters" index="3" instance=ExtResource( 7 )]

position = Vector2( 513.703, 674.735 )

[node name="MonsterRanged4" parent="YSort/Monsters" index="4" instance=ExtResource( 7 )]

position = Vector2( 75.9164, 500.904 )
timeReload = 1.5

[node name="MonsterRanged5" parent="YSort/Monsters" index="5" instance=ExtResource( 7 )]

position = Vector2( 145.875, 97.7076 )
timeReload = 1.0

[node name="Rock1" parent="YSort" index="3" instance=ExtResource( 8 )]

position = Vector2( 338.916, 340.923 )

[node name="DialogueTrigger" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueTrigger" index="0"]

position = Vector2( 574.081, 300.645 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TimerInterface" type="CanvasLayer" parent="." index="6"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Interface" type="Label" parent="TimerInterface" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_top = 29.0
margin_right = 606.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[connection signal="body_entered" from="DialogueTrigger" to="dialogue_system" method="_on_Area2D_body_entered"]

[connection signal="body_entered" from="DialogueTrigger" to="DialogueTrigger" method="_on_DialogueTrigger_body_entered"]


